name:                wstunnel
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/wstunnel#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tunnel, Protocols, Types, Logger, Socks5, Credentials, HttpProxy
  default-extensions:  NoImplicitPrelude, ScopedTypeVariables, BangPatterns, RecordWildCards
  build-depends:       async                      >= 2.2.1 && < 2.3
                     , base                       >= 4.12.0 && < 4.13
                     , bytestring                 >= 0.10.8 && < 0.11
                     , text                       >= 1.2.3 && < 1.3
                     , binary                     >= 0.8.6 && < 0.9
                     , base64-bytestring          >= 1.0.0 && < 1.1
                     , classy-prelude             >= 1.5.0 && < 1.6
                     , unordered-containers       >= 0.2.9 && < 0.3
                     , mtl                        >= 2.2.2 && < 2.3
                     , connection                 >= 0.2.8 && < 0.3
                     , network                    >= 2.8.0 && < 2.9
                     , hslogger                   >= 1.2.12 && < 1.3
                     , network-conduit-tls        >= 1.3.2 && < 1.4
                     , streaming-commons          >= 0.2.1 && < 0.3
                     , websockets                 >= 0.12.5 && < 0.13
                     , cmdargs                    >= 0.10.20 && < 0.11

  default-language:    Haskell2010

test-suite wstunnel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , text >= 1.2.2.1
                     , wstunnel
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/wstunnel

executable wstunnel
  hs-source-dirs:      app
  main-is:             Main.hs
  default-extensions:  NoImplicitPrelude, ScopedTypeVariables, BangPatterns, RecordWildCards
  ghc-options:         -threaded
                       -O3
                       -rtsopts "-with-rtsopts=-N"
  build-depends:       base
                     , bytestring
                     , classy-prelude
                     , cmdargs
                     , hslogger
                     , text >= 1.2.2.1
                     , wstunnel

  default-language:    Haskell2010
